--- a/package.json
+++ b/package.json
@@ -1,1 +1,42 @@
-{"name":"portfolio-app","private":true,"version":"0.0.0","type":"module","scripts":{"dev":"vite","build":"vite build","lint":"eslint . --ext ts,tsx","preview":"vite preview"},"dependencies":{"framer-motion":"^11.0.8","lucide-react":"^0.344.0","react":"^18.3.1","react-dom":"^18.3.1","react-router-dom":"^6.28.1"},"devDependencies":{"@eslint/js":"^9.9.1","@types/node":"^22.13.11","@types/react":"^18.3.5","@types/react-dom":"^18.3.0","@vitejs/plugin-react":"^4.3.1","autoprefixer":"^10.4.21","eslint":"^9.9.1","eslint-config-prettier":"^9.1.0","eslint-plugin-react-hooks":"^5.1.0-rc.0","eslint-plugin-react-refresh":"^0.4.11","globals":"^15.9.0","postcss":"^8.5.3","prettier":"^3.3.0","tailwindcss":"^3.4.17","typescript":"^5.5.3","typescript-eslint":"^8.3.0","vite":"^5.4.2"}}
+{
+    "name": "portfolio-app",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "homepage": "https://anassyed2912.github.io/Syed-portfolio",
+    "scripts": {
+      "dev": "vite",
+      "build": "vite build",
+      "preview": "vite preview",
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d dist"
+    },
+    "dependencies": {
+      "framer-motion": "^11.0.8",
+      "gh-pages": "^6.3.0",
+      "lucide-react": "^0.344.0",
+      "react": "^18.3.1",
+      "react-dom": "^18.3.1",
+      "react-router-dom": "^6.28.1"
+    },
+    "devDependencies": {
+      "@eslint/js": "^9.9.1",
+      "@types/node": "^22.13.11",
+      "@types/react": "^18.3.5",
+      "@types/react-dom": "^18.3.0",
+      "@vitejs/plugin-react": "^4.3.1",
+      "autoprefixer": "^10.4.21",
+      "eslint": "^9.9.1",
+      "eslint-config-prettier": "^9.1.0",
+      "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+      "eslint-plugin-react-refresh": "^0.4.11",
+      "globals": "^15.9.0",
+      "postcss": "^8.5.3",
+      "prettier": "^3.3.0",
+      "tailwindcss": "^3.4.17",
+      "typescript": "^5.5.3",
+      "typescript-eslint": "^8.3.0",
+      "vite": "^5.4.2"
+    }
+  }
+  
